ResearchOps/argo-events/webhook/eventsource_webhook.yaml

apiVersion: v1
kind: Service
metadata:
  name: webhook-eventsource
  namespace: argo-events
spec:
  ports:
  - port: 12000
    targetPort: 12000
  type: ClusterIP
  selector:
    eventsource-name: webhook
